--- a/SoftUni SpringData/CarDealer/src/main/resources/application.properties
+++ b/SoftUni SpringData/CarDealer/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=CarDealer
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/car_dealer_db?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=kikoniko
+spring.datasource.password=1234
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
