--- a/SoftUni SpringData/ProductsShop/src/main/resources/application.properties
+++ b/SoftUni SpringData/ProductsShop/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/products_shop?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=kikoniko
+spring.datasource.password=1234
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
