--- a/SoftUni SpringData/SpringData-Intro/BookShopSystem/src/main/resources/application.properties
+++ b/SoftUni SpringData/SpringData-Intro/BookShopSystem/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/book_shop?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=kikoniko
+spring.datasource.password=1234
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
