--- a/Spring Fundamentals/DictionaryApp/src/main/resources/application.yaml
+++ b/Spring Fundamentals/DictionaryApp/src/main/resources/application.yaml
@@ -13,8 +13,8 @@ spring:
         enabled: 'true'
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    password: ''
-    username: ''
+    username: ${MYSQL_USERNAME}
+    password: ${MYSQL_PASS}
     url: jdbc:mysql://localhost:3306/dictionary?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
 logging:
   level:
